[gd_scene load_steps=16 format=2]

[ext_resource path="res://Font/Default.tres" type="DynamicFont" id=1]
[ext_resource path="res://Font/Small.tres" type="DynamicFont" id=2]
[ext_resource path="res://Font/SmallBold.tres" type="DynamicFont" id=3]
[ext_resource path="res://Interface/ErrorPanel.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 0.666667 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.870588, 0.192157, 0.388235, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.32549, 0.32549, 0.333333, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 1, 0.74902, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxLine" id=22]
color = Color( 0.0784314, 0.0784314, 0.0862745, 1 )
thickness = 5
vertical = true

[sub_resource type="Theme" id=9]
VScrollBar/styles/grabber = SubResource( 19 )
VScrollBar/styles/grabber_highlight = SubResource( 20 )
VScrollBar/styles/grabber_pressed = SubResource( 21 )
VScrollBar/styles/scroll = SubResource( 22 )

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="Theme" id=15]
Button/styles/hover = SubResource( 17 )
Button/styles/normal = SubResource( 18 )
Button/styles/pressed = SubResource( 18 )

[sub_resource type="StyleBoxEmpty" id=16]

[node name="ErrorPanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1280, 600 )
script = ExtResource( 4 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BG" type="Panel" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -100.0
margin_right = 150.0
margin_bottom = 100.0
custom_styles/panel = SubResource( 11 )

[node name="TOP" type="Panel" parent="Control/BG"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -150.0
margin_right = 150.0
margin_bottom = 20.0
custom_styles/panel = SubResource( 12 )

[node name="Label" type="RichTextLabel" parent="Control/BG/TOP"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -135.0
margin_top = -4.0
margin_right = 135.0
margin_bottom = 4.0
rect_min_size = Vector2( 0, 8 )
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[color=#4A0404][b]ERROR!"
text = "ERROR!"
scroll_active = false

[node name="Control" type="Control" parent="Control/BG"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -180.0
margin_right = 150.0
margin_bottom = -30.0

[node name="ErrorJson" type="RichTextLabel" parent="Control/BG/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -135.0
margin_top = -60.0
margin_right = 135.0
margin_bottom = 60.0
rect_min_size = Vector2( 270, 120 )
focus_mode = 2
theme = SubResource( 9 )
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
tab_size = 1
selection_enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="Control/BG"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -135.0
margin_top = -28.0
margin_right = 135.0
margin_bottom = -8.0
alignment = 2

[node name="COPY" type="Button" parent="Control/BG/HBoxContainer"]
margin_left = 66.0
margin_right = 166.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 0 )
theme = SubResource( 15 )
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 16 )
text = "COPY"
icon_align = 2
expand_icon = true

[node name="OKAY" type="Button" parent="Control/BG/HBoxContainer"]
margin_left = 170.0
margin_right = 270.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 0 )
theme = SubResource( 15 )
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 16 )
text = "OKAY"
icon_align = 2
expand_icon = true

[connection signal="pressed" from="Control/BG/HBoxContainer/COPY" to="." method="_on_COPY_pressed"]
[connection signal="pressed" from="Control/BG/HBoxContainer/OKAY" to="." method="_on_OKAY_pressed"]
